tests/conformance/accept/import-type/entry.ts
import { addMeters } from './measures';
console.log(addMeters(40n, 2n));
